Add deprecation info to library description.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=AzureIoTProtocol_MQTT
-version=1.6.0
+version=1.6.1
 author=Microsoft
 maintainer=Microsoft <iotcert@microsoft.com>
-sentence=Azure MQTT protocol library for Arduino. For the Arduino MKR1000 or Zero and WiFi Shield 101, Adafruit Huzzah and Feather M0, or SparkFun Thing.
-paragraph=Microsoft compact implementation of the MQTT protocol for small devices like Arduino. It allows you to use your Arduino with the Azure IoT Hub using MQTT as the transport protocol.  See readme.md for more details.
+sentence=[See deprecation warning!] Azure MQTT protocol library for Arduino. For the Arduino MKR1000 or Zero and WiFi Shield 101, Adafruit Huzzah and Feather M0, or SparkFun Thing.
+paragraph=[Warning: This library is being deprecated! Please use Azure SDK for C for new projects]. Microsoft compact implementation of the MQTT protocol for small devices like Arduino. It allows you to use your Arduino with the Azure IoT Hub using MQTT as the transport protocol.  See readme.md for more details.
 category=Communication
 url=https://github.com/Azure/azure-iot-arduino-protocol-mqtt
 architectures=samd,esp8266,esp32
